Fix errors in zotero date export and add missing DOI's to cited refs for PreReg manuscript

--- a/_analysis/references_obsidian.bib
+++ b/_analysis/references_obsidian.bib
@@ -194,11 +194,12 @@
 @article{Addison:2013wa,
   title = {Practical Solutions for Making Models Indispensable in Conservation Decision-Making},
   author = {Addison, Prue FE and Rumpff, Libby and Bau, S. Sana and Carey, Janet M. and Chee, Yung En and Jarrad, Frith C. and Jarrad, Frith C. and McBride, Marissa F. and Burgman, Mark A.},
-  year = {/01/01 2013},
+  year = {2013},
   journal = {Diversity and Distributions},
   volume = {19},
   number = {5-6},
   pages = {490--502},
+  doi = {https://doi.org/10.1111/ddi.12054},
   keywords = {Communication,Conservation,Modelling,Papers_flagged,Structured decision-making,Trust,Uncertainty},
   file = {/Users/elliotgould/Zotero/storage/3MRT5IUF/Addison-2013-Diversity_Distrib.pdf}
 }
@@ -301,7 +302,7 @@
 @article{Agnoli:2017kl,
   title = {Questionable Research Practices among Italian Research Psychologists.},
   author = {Agnoli, Franca and Wicherts, Jelte M. and Veldkamp, Coosje L. S. and Albiero, Paolo and Cubelli, Roberto},
-  year = {/01/01 2017},
+  year = {2017},
   journal = {PLoS One},
   volume = {12},
   number = {3},
@@ -2242,7 +2243,7 @@
 @article{BenBondLamberty:2018by,
   title = {Running an Open Experiment: Transparency and Reproducibility in Soil and Ecosystem Science},
   author = {Ben, Bond-Lamberty and Smith, A. Peyton and Bailey, Vanessa},
-  year = {/02/20 2018},
+  year = {2018},
   journal = {Environmental Research Letters},
   volume = {11},
   number = {8},
@@ -2379,6 +2380,7 @@
   number = {6},
   pages = {528},
   issn = {1939-1846},
+  doi = {https://doi.org/10.1037/abn0000451},
   abstract = {Clinical scientists can use a continuum of registration efforts that vary in their disclosure and timing relative to data collection and analysis. Broadly speaking, registration benefits investigators by offering stronger, more powerful tests of theory with particular methods in~{\dots}}
 }
 
@@ -2590,7 +2592,7 @@
   title = {A {{Quick Introduction}} to {{Version Control}} with {{Git}} and {{GitHub}}},
   author = {Blischak, John D. and Davenport, Emily R. and Wilson, Greg},
   editor = {Ouellette, Francis},
-  year = {/01/19 2016},
+  year = {2016},
   journal = {PLoS Computational Biology},
   volume = {12},
   number = {1},
@@ -4833,7 +4835,7 @@
 @article{COOK:2017be,
   title = {Simplifying the Selection of Evidence Synthesis Methods to Inform Environmental Decisions\_ {{A}} Guide for Decision Makers and Scientists},
   author = {COOK, CARLY N. and Nichols, Susan J. and Webb, J. Angus and Fuller, Richard A. and Richards, Rob M.},
-  year = {/09/01 2017},
+  year = {2017},
   journal = {Biological Conservation},
   volume = {213},
   number = {Part A},
@@ -7908,6 +7910,7 @@
   author = {Gelman, Andrew},
   journal = {stat.columbia.edu},
   abstract = {The ASA's statement on p-values says,``Valid scientific conclusions based on p-values and related statistics cannot be drawn without at least knowing how many and which analyses were conducted.'' I agree, but knowledge of how many analyses were conducted etc. is not enough. The whole point of the ``garden of forking paths''(Gelman and Loken 2014) is that to compute a valid p-value you need to know what analyses would have been done had the data been different. Even if the researchers only did a single analysis of the data at hand~{\dots}},
+  url={https://api.semanticscholar.org/CorpusID:198164638},
   file = {/Users/elliotgould/Zotero/storage/6623DLSB/Gelman.pdf}
 }
 
@@ -10395,7 +10398,7 @@
 @article{Ioannidis:2014cm,
   title = {Publication and Other Reporting Biases in Cognitive Sciences: Detection, Prevalence, and Prevention},
   author = {Ioannidis, John P. A. and Munaf{\`o}, Marcus R. and {Fusar-Poli}, Paolo and Nosek, Brian A. and David, Sean P.},
-  year = {/05/01 2014},
+  year = {2014},
   journal = {Trends in Cognitive Sciences},
   volume = {18},
   number = {5},
@@ -10798,7 +10801,7 @@
 @article{John:2012eo,
   title = {Measuring the {{Prevalence}} of {{Questionable Research Practices With Incentives}} for {{Truth Telling}}},
   author = {John, Leslie K. and Loewenstein, George and Prelec, Drazen},
-  year = {/04/17 2012},
+  year = {2012},
   journal = {Psychological Science},
   volume = {23},
   number = {5},
@@ -16899,8 +16902,8 @@
 
 @article{OpenScienceCollaboration:2015cn,
   title = {Estimating the Reproducibility of Psychological Science},
-  author = {Open, Science Collaboration},
-  year = {/08/27 2015},
+  author = {Open Science Collaboration},
+  year = {2015},
   journal = {Science (New York, N.Y.)},
   volume = {349},
   number = {6251},
@@ -16913,7 +16916,7 @@
 @article{Ordonez:2010km,
   title = {Functional Differences between Native and Alien Species: A Global-Scale Comparison},
   author = {Ordonez, Alejandro and Wright, Ian J. and Olff, Han},
-  year = {/07/08 2010},
+  year = {2010},
   journal = {Functional Ecology},
   volume = {24},
   number = {6},
@@ -16926,7 +16929,7 @@
 @article{Orzack:1993uc,
   title = {A Critical Assessment of {{Levins}}'s {{The}} Strategy of Model Building in Population Biology (1966)},
   author = {Orzack, S. H. and Sober, E.},
-  year = {/01/01 1993},
+  year = {1993},
   journal = {Quarterly Review of Biology},
   pages = {533--546},
   doi = {10.2307/3037250},
@@ -18438,11 +18441,13 @@
   file = {/Users/elliotgould/Zotero/storage/H76ERSP7/Pu_&_Kay_2018.pdf}
 }
 
-@article{Pu2019,
+@inproceedings{Pu2019,
   title = {Designing for Preregistration in Practice: {{Multiple}} Norms and Purposes},
   author = {Pu, Xiaoying and Zhu, Licheng and Kay, Matthew and Conrad, Frederick},
   year = {2019},
+  volume = {Preprint},
   abstract = {The replication crisis---a failure to replicate foundational studies---has sparked a conversation in psychology, HCI, and beyond about scientific reliability. To address the crisis, researchers increasingly adopt preregistration: the practice of documenting research plans before conducting a study. Done properly, preregistration reduces bias from taking exploratory findings as confirmatory. It is crucial to treat preregistration, often an online form/template, as a user-centered design problem to ensure preregistration achieves its {\dots}},
+  doi = {https://doi.org/10.31219/osf.io/w5ked},
   file = {/Users/elliotgould/Zotero/storage/5996TIRT/Pu_et_al_2019.pdf}
 }
 
@@ -23562,7 +23567,9 @@
   year = {2016},
   abstract = {The designing, collecting, analyzing, and reporting of psychological studies entail many choices that are often arbitrary. The opportunistic use of these so-called researcher degrees of freedom aimed at obtaining statistically significant results is problematic because it enhances the chances of false positive results and may inflate effect size estimates. In this review article, we present an extensive list of 34 degrees of freedom that researchers have in formulating hypotheses, and in designing, running, analyzing, and reporting of psychological research. The list can be used in research methods education, and as a checklist to assess the quality of preregistrations and to determine the potential for bias due to (arbitrary) choices in unregistered studies.},
   keywords = {bias,experimental design,p-hacking,questionable research practice,research methods education,significance chasing,significance testing},
-  file = {/Users/elliotgould/Zotero/storage/ISFXB63T/Wicherts_et_al_2016_337.pdf;/Users/elliotgould/Zotero/storage/QVK726QW/Wicherts_et_al_2016.pdf}
+  file = {/Users/elliotgould/Zotero/storage/ISFXB63T/Wicherts_et_al_2016_337.pdf;/Users/elliotgould/Zotero/storage/QVK726QW/Wicherts_et_al_2016.pdf},
+  doi = {https://doi.org/10.3389/fpsyg.2016.01832},
+  journal = {Frontiers in Psychology}
 }
 
 @article{Wicherts2017,
@@ -24944,8 +24951,9 @@
 	author = {Willroth, Emily C and Atherton, Olivia E},
 	year = {2024},
 	date = {2024},
-	note = {Citation Key: willroth2024},
-	langid = {en}
+	langid = {en},
+	doi = {https://doi.org/10.1177/25152459231213802},
+	journal = {Association for Psychological Science}
 }
 
 @article{Lakens2024,
@@ -25035,14 +25043,16 @@ Citation Key: Arnold2020}
 	langid = {en}
 }
 
-@techreport{Tonkin2020,
-	title = {Victorian Environmental Flows Monitoring and Assessment Program},
-	author = {Tonkin, Z and Jones, C and Clunie, P and Vivian, L and Amtstaetter, F and Jones, M and Koster, W and Mole, B and {O{\textquoteright}Connor}, J and Brooks, J and Caffrey, L and Lyon, J},
-	year = {2020},
-	date = {2020},
-	note = {Citation Key: Tonkin2020},
-	address = {Heidelberg, Victoria},
-	langid = {en}
+ @book{Tonkin2020, 
+  address={Heidelberg, Victoria}, 
+  series={Technical Report Series}, 
+  title={Victorian Environmental Flows Monitoring and Assessment Program. Stage 6 Synthesis Report 2016-2020}, 
+  number={316}, 
+  institution={Department of Environment, Land, Water and Planning}, 
+  author={Tonkin, Z and Jones, C and Clunie, P and Vivian, L and Amtstaetter, F and Jones, M and Koster, W and Mole, B and O’Connor, J and Brooks, J and Caffrey, L and Lyon, J}, 
+  year={2020}, 
+  collection={Technical Report Series}, 
+  language={en} 
 }
 
 @article{Neoh2023,
