Add figure 3 case study workflow image file, insert into ms, add caption and update all cross-refs

--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -294,7 +294,7 @@ The final Preregistration Template, refined by application of the draft Preregis
 
 ## Findings From the Case Study
 
-The application of our preregistration template and Adaptive Preregistration methodology to the environmental flows modelling case study occurred across three distinct stages (@tbl-modelling-stages, Fig. 3), with two interim preregistrations (Version 1 and Version 2) preceding the finalised preregistration (Version 3, Supp Mat E), each corresponding to distinct phases in both the Preregistration and Modelling & Analysis processes. While preparing Version 1, the modellers decided that they needed to conduct some analysis to specify a set of appropriate candidate models. They preregistered a pilot analysis (Version 2) which used a subset of the full dataset to preserve some degree of data-dependent decision-making while permitting a degree of exploratory analysis. Results from the pilot analysis informed subsequent preregistration of the Main Analysis on the full dataset (Version 3, Supp. Mat. E). Several classes of data-dependent decisions (Liu et al. 2020) emerged during our case study, which were managed using a combination of registered flexibility and interim preregistrations:
+The application of our preregistration template and Adaptive Preregistration methodology to the environmental flows modelling case study occurred across three distinct stages (@tbl-modelling-stages, @fig-case-study-workflow), with two interim preregistrations (Version 1 and Version 2) preceding the finalised preregistration (Version 3, Supp Mat E), each corresponding to distinct phases in both the Preregistration and Modelling & Analysis processes. While preparing Version 1, the modellers decided that they needed to conduct some analysis to specify a set of appropriate candidate models. They preregistered a pilot analysis (Version 2) which used a subset of the full dataset to preserve some degree of data-dependent decision-making while permitting a degree of exploratory analysis. Results from the pilot analysis informed subsequent preregistration of the Main Analysis on the full dataset (Version 3, Supp. Mat. E). Several classes of data-dependent decisions (Liu et al. 2020) emerged during our case study, which were managed using a combination of registered flexibility and interim preregistrations:
 
 -   *Data-flow dependencies*: where the output of one decision is the input to another. For example, the models parameterised on the full dataset in the case study’s Main Analysis were subjected to a suite of model checks as outlined in the decision-trees in Preregistration Version 3, with the results of model checking informing *a priori* specified alternative model structures and model functional forms.
 -   *Information dependency*: where one decision informs another. For example, outcomes from the exploratory pilot analysis (Interim Preregistration Version 2, @tbl-modelling-stages) informed the model structures specified in Preregistration Version 3 (@tbl-modelling-stages), as well as the decision heuristics for triggering their fitting and acceptance.
@@ -302,19 +302,19 @@ The application of our preregistration template and Adaptive Preregistration met
 
 ### Interim Preregistration (Versions 1 and 2)
 
-Two initial candidate models were preregistered in Version 1 (Fig. 3), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (@tbl-modelling-stages). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, @tbl-modelling-stages and Fig. 3). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 3B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
+Two initial candidate models were preregistered in Version 1 (@fig-case-study-workflow), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (@tbl-modelling-stages). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, @tbl-modelling-stages and @fig-case-study-workflow). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 4B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
 
 ### Final Preregistration (Version 3): Main Analysis
 
 In Version 3 of the Preregistration, we derived and preregistered:
 
-1.  A preferred candidate model or ‘full model’ for each response variable (vegetation richness and vegetation cover), to be fitted to the full dataset (Initial Preregistration, Fig. 3, Supp. Mat. E, p13).
-2.  A candidate set of simplified models that separately captured different flow components for each response variable, with two versions of the flow events model for vegetation cover (Flow Events Models A & B, Fig. 3, Supp. Mat. E, pp.20-21).
-3.  Decision-trees for triggering fitting and acceptance of the candidate simplified models should the preferred full model specifications fail to converge and/or provide appropriate parameter estimates (Fig. 3).
-4.  A second flexible strategy, for determining model functional form and to account for potential over-dispersion (Fig. 3). Preregistering this flexibility was motivated by the modellers’ concerns that the actual data distributions in the full dataset did not match expectations informed by the pilot analysis. This final decision-point for choosing the model family is subjective and fuzzy, and explicit weightings between the three model performance criteria could not be expressed or preregistered. Instead, modellers explained that the final decision will be guided by the model’s overall ability to capture key associations reliably.
+1.  A preferred candidate model or ‘full model’ for each response variable (vegetation richness and vegetation cover), to be fitted to the full dataset (Initial Preregistration, @fig-case-study-workflow, Supp. Mat. E, p13).
+2.  A candidate set of simplified models that separately captured different flow components for each response variable, with two versions of the flow events model for vegetation cover (Flow Events Models A & B, @fig-case-study-workflow, Supp. Mat. E, pp.20-21).
+3.  Decision-trees for triggering fitting and acceptance of the candidate simplified models should the preferred full model specifications fail to converge and/or provide appropriate parameter estimates (@fig-case-study-workflow).
+4.  A second flexible strategy, for determining model functional form and to account for potential over-dispersion (@fig-case-study-workflow). Preregistering this flexibility was motivated by the modellers’ concerns that the actual data distributions in the full dataset did not match expectations informed by the pilot analysis. This final decision-point for choosing the model family is subjective and fuzzy, and explicit weightings between the three model performance criteria could not be expressed or preregistered. Instead, modellers explained that the final decision will be guided by the model’s overall ability to capture key associations reliably.
 
 | Preregistration Version | Preregistration Process | Modelling and Analysis Process |
-|----|----|----|
+|------------------------|------------------------|------------------------|
 | **Version 1:** (v0.10 – v0.8.1) | Establish problem context, study background and aims, describe data collection and data cleaning process, articulate modelling objectives, and specify candidate models. | Data cleaning and preparation undertaken concurrently by lead and supporting researchers due to limited resourcing and short timelines for project deliverables. Candidate models addressing different components of the research question were preregistered. Identify data structural properties and potential consequences for model fitting |
 | **Version 2:** (v0.9.0-v.0.12.5) | Describe Pilot Analysis on data subset and specify registered flexibility in the form of decision heuristics. | Critical uncertainties in modelling decisions were articulated (e.g. how do we classify best flow regime based on inundation data?). In addition, data partitioning, exploratory data analysis, refined candidate models and model checking procedure preregistered |
 | **Version 3:** (v0.13.0-v.0.20.1) | Describe Main Analysis, including specification of decision tree for model selection process based on results of pilot analysis. | Conducted modelling and analysis as outlined in preregistration. Reported deviations and rationale as necessary. |
@@ -322,9 +322,7 @@ In Version 3 of the Preregistration, we derived and preregistered:
 
 : Key stages of the modelling and Adaptive Preregistration process implemented in the environmental flows modelling case study. Version numbers in parentheses are GitHub tags, marking snapshots of the repository for each Preregistration Version {#tbl-modelling-stages}
 
-<!--# Insert Figure 3 - case study workflow -->
-
-Figure 3 illustrates the evolution of model development across preregistration iterations in the case study. The two Registered Flexibility steps in the Main Analysis (v3) (shown in blue) are further described in Fig. 4.
+![illustrates the evolution of model development across preregistration iterations in the case study. The two Registered Flexibility steps in the Main Analysis (v3) (shown in blue) are further described in Fig. 4.](images/Figure_3-Case_Study_Workflow.png){#fig-case-study-workflow width="14cm" height="24cm"}
 
 <!--# Insert Figure 4 -->
 
