update doi for taylor, fix year formatting

--- a/_analysis/references_obsidian.bib
+++ b/_analysis/references_obsidian.bib
@@ -21667,7 +21667,7 @@
 @article{Taylor:2003uw,
   title = {Biodiversity {{Action Planning}}},
   author = {Taylor, Rodd and Jellinek, S. and Driscoll, D. A. and Wierzbowski, P. and Lowe, K. W. and Kirkpatrick, J. B. and Ross, James and Moorrees, Adrian and Ahem, Leigh},
-  year = {/11/10 2003},
+  year = {003},
   journal = {Parks, Flora and Fauna Division; Department of Sustainability and Environment},
   pages = {1--139},
   keywords = {Active adaptive management,Biodiversity,Conservation planning,Edge effects,Fragment size / area,Landscape planning,Papers_flagged,Papers_label_green,Species abundance,Species richness,Urban planning,Urban remnants,Vegetation,Victoria,Victorian Volcanic Plain Bioregion},
@@ -21679,6 +21679,7 @@
   author = {Taylor, Simon JE and Eldabi, Tillal and Monks, Thomas and Rabe, Markus and Uhrmacher, Adelinde M.},
   year = {2018},
   volume = {2018 Winter Simulation Conference (WSC)},
+  doi = {https://doi.org/10.1109/WSC.2018.8632232},
   pages = {749--762},
   publisher = {IEEE},
   abstract = {How important it is to our discipline that we can reproduce the results of Modeling \& Simulation (M\&S) research? How important is it to be able to (re) use the models, data, and methods described in simulation publications to reproduce published results? Is it really that important or are the lessons and experiences described in a paper enough for us to build on the work of others? At the 2016 Winter Simulation Conference, a panel considered opinions on reproducibility in discrete-event simulation. This article builds on these and asks if there~{\dots}},
