Add fig 4 case study decision trees image and insert, add caption, tag, update cross-refs.

--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -298,11 +298,11 @@ The application of our preregistration template and Adaptive Preregistration met
 
 -   *Data-flow dependencies*: where the output of one decision is the input to another. For example, the models parameterised on the full dataset in the case study’s Main Analysis were subjected to a suite of model checks as outlined in the decision-trees in Preregistration Version 3, with the results of model checking informing *a priori* specified alternative model structures and model functional forms.
 -   *Information dependency*: where one decision informs another. For example, outcomes from the exploratory pilot analysis (Interim Preregistration Version 2, @tbl-modelling-stages) informed the model structures specified in Preregistration Version 3 (@tbl-modelling-stages), as well as the decision heuristics for triggering their fitting and acceptance.
--   *Procedural dependency*: where downstream decisions would not exist if some alternative upstream decision was made instead. For example, if preliminary analysis of the data had not revealed over-dispersion or zero-inflation in the data, then the case study modellers would not have fitted zero-inflated Poisson models, nor would they have trialled accounting for over-dispersion or refitting using negative binomial models (Fig. 4).
+-   *Procedural dependency*: where downstream decisions would not exist if some alternative upstream decision was made instead. For example, if preliminary analysis of the data had not revealed over-dispersion or zero-inflation in the data, then the case study modellers would not have fitted zero-inflated Poisson models, nor would they have trialled accounting for over-dispersion or refitting using negative binomial models (fig-case-study-registered-flexibility).
 
 ### Interim Preregistration (Versions 1 and 2)
 
-Two initial candidate models were preregistered in Version 1 (@fig-case-study-workflow), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (@tbl-modelling-stages). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, @tbl-modelling-stages and @fig-case-study-workflow). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 4B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
+Two initial candidate models were preregistered in Version 1 (@fig-case-study-workflow), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (@tbl-modelling-stages). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, @tbl-modelling-stages and @fig-case-study-workflow). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (fig-case-study-registered-flexibilityB), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
 
 ### Final Preregistration (Version 3): Main Analysis
 
@@ -322,11 +322,11 @@ In Version 3 of the Preregistration, we derived and preregistered:
 
 : Key stages of the modelling and Adaptive Preregistration process implemented in the environmental flows modelling case study. Version numbers in parentheses are GitHub tags, marking snapshots of the repository for each Preregistration Version {#tbl-modelling-stages}
 
-![illustrates the evolution of model development across preregistration iterations in the case study. The two Registered Flexibility steps in the Main Analysis (v3) (shown in blue) are further described in Fig. 4.](images/Figure_3-Case_Study_Workflow.png){#fig-case-study-workflow width="14cm" height="24cm"}
+![illustrates the evolution of model development across preregistration iterations in the case study. The two Registered Flexibility steps in the Main Analysis (v3) (shown in blue) are further described in @fig-case-study-registered-flexibility .](images/Figure_3-Case_Study_Workflow.png){#fig-case-study-workflow width="14cm" height="24cm"}
 
-<!--# Insert Figure 4 -->
-
-Figure 4 - illustrates how registered flexibility was applied within the case study preregistration, for selecting model structure (A) and choosing an alternative model functional form to the default (zero-inflated Poisson) (B).
+::: landscape
+![illustrates how registered flexibility was applied within the case study preregistration, for selecting model structure (A) and choosing an alternative model functional form to the default (zero-inflated Poisson) (B).](images/Figure_4-case_study_registered_flexibility%20-%20preregistered%20decision%20trees.png){#fig-case-study-registered-flexibility}
+:::
 
 ## Adaptive Preregistration in Practice: Benefits and Challenges
 
